force-app/main/default/objects/LLC_BI__third_party_report__c/LLC_BI__third_party_report__c.object-meta.xml
<CustomObject>
    <description>Form to enable Pods to order Third Party Reports</description>
    <label>Third Party Report</label>
    <nameField>
        <displayFormat>{MM}-{YY}-{0}</displayFormat>
        <label>Third Party Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>