force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Associated_Fee__c.field-meta.xml
<CustomField>
    <fullName>Associated_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Fee</label>
    <referenceTo>LLC_BI__Fee__c</referenceTo>
    <relationshipLabel>Third Party Reports</relationshipLabel>
    <relationshipName>Third_Party_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>