force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Closing_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Closing_Attorney__c</fullName>
    <label>Closing Attorney</label>
    <length>75</length>
    <type>Text</type>
</CustomField>