force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Contact_for_Access__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Access__c</fullName>
    <label>Contact for Access</label>
    <length>75</length>
    <type>Text</type>
</CustomField>