force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <label>Contact Phone #</label>
    <type>Phone</type>
</CustomField>