force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Legal_Description__c.field-meta.xml
<CustomField>
    <fullName>Legal_Description__c</fullName>
    <label>Legal Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>