force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Building_Size_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Building_Size_Sq_Ft__c</fullName>
    <description>This field is optional and specifies the subject facility&apos;s building size. It is manually populated.</description>
    <label>Building Size (Sq Ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>