force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Current_Property_Use__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Current_Property_Use__c</fullName>
    <description>This field is optional and describes the subject property/building&apos;s current usage. It is manually populated.</description>
    <label>Current Property Use / Occupants</label>
    <length>100</length>
    <type>Text</type>
</CustomField>