force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Property_County__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Property_County__c</fullName>
    <description>This field is optional and specifies the  subject property&apos;s county. It is manually populated.</description>
    <label>Property County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>