force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Property_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Property_Description__c</fullName>
    <description>This field is optional and describes the subject property. It is manually populated.</description>
    <label>Property Description</label>
    <type>TextArea</type>
</CustomField>