force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Site_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Site_Contact_Name__c</fullName>
    <description>This field is optional and specifies the subject property contact&apos;s phone number. It is manually populated.</description>
    <label>Site Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>