force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Site_Size__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Site_Size__c</fullName>
    <description>This field is optional and specifies the subject property&apos;s lot size. It is manually populated.</description>
    <label>Site Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>