force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Year_Built__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Year_Built__c</fullName>
    <description>This field is optional and specifies the year in which the subject property was built. It is manually populated.</description>
    <label>Year Built</label>
    <length>10</length>
    <type>Text</type>
</CustomField>