force-app/main/default/objects/LLC_BI__third_party_report__c/fields/LLC_BI__Zoning__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Zoning__c</fullName>
    <description>This field is optional and specifies the of subject property&apos;s zoning type (Residential, Commercial, Industrial, Agriculture, etc.). It is manually populated.</description>
    <label>Zoning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commerical</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>