force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Order_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Order_Appraisal__c</fullName>
    <label>Order Appraisal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Bid-Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>