force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Pin__c.field-meta.xml
<CustomField>
    <fullName>Pin__c</fullName>
    <label>Pin #</label>
    <length>16</length>
    <type>Text</type>
</CustomField>