force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <label>Property Owner</label>
    <length>75</length>
    <type>Text</type>
</CustomField>