force-app/main/default/objects/LLC_BI__third_party_report__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.cm_Third_Party_Type_Text__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Third Party Reports (Service Provider)</relationshipLabel>
    <relationshipName>Third_Party_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>